# fusionportable_dataset_tools

./: .gitignore  .gitmodules  README.md  generate_depthmap_to_kitti360.ipynb  requirements.txt  setup.py  visualize_depthmap.ipynb  visualize_tf_tree.ipynb  write_alg_bag_to_data.ipynb  write_alg_rosbag_to_files.ipynb  write_bag_to_data.ipynb  write_data_to_kitti.ipynb  write_data_to_kitti360.ipynb  write_depthmap_to_kitti360.ipynb  write_rosbag_to_files.ipynb
application/: README.md
calibration/encoder_calc/: README.md
calibration/encoder_calc/encoder_calc/: CMakeLists.txt  demo.rviz
calibration/encoder_calc/encoder_calc/include/: main.h
calibration/encoder_calc/encoder_calc/src/: main.cpp
cfg/: rostopic_alg_r3live.py  rostopic_vehicle.py
cfg/algorithm/: cfg_fastlio2.py  cfg_r3live.py
cfg/dataset/: cfg_handheld.py  cfg_legged.py  cfg_sequence.py  cfg_ugv.py  cfg_vehicle.py
data_loader/: file_loader.py  file_writer.py
data_loader/calib/: intrinsic_extrinsic_loader.py
data_loader/ros_msg/: basic_message.py  image.py  odometry.py  pointcloud.py
doc/: contribution.md
evaluation/: README.md
fusionportable_dataset_tools.egg-info/: PKG-INFO  SOURCES.txt
rviz_cfg/: fusionportable.rviz
scripts/: download_dataset_google_drive.py  fpv2_google_drive_link.py
sensor/: camera_pinhole.py  lidar.py
src/: __init__.py  visualize_tf_tree.ipynb  write_alg_bag_to_data.ipynb  write_bag_to_data.ipynb  write_data_to_kitti360.ipynb  write_depthmap_to_kitti360.ipynb
tools/: download_fpv2.py  img2video.py  tf_graph.py  trajectory.py  utils.py
(+152 files in other folders)
